syntax = "proto3";

package varlog.snpb;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "google/protobuf/empty.proto";

import "varlogpb/metadata.proto";
import "snpb/replicator.proto";

option go_package = "github.daumkakao.com/varlog/varlog/proto/snpb";

option (gogoproto.protosizer_all) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;

message GetMetadataRequest {
    uint32 cluster_id = 1 [
        (gogoproto.casttype) =
            "github.daumkakao.com/varlog/varlog/pkg/types.ClusterID",
        (gogoproto.customname) = "ClusterID"
    ];
}

message GetMetadataResponse {
    varlogpb.StorageNodeMetadataDescriptor storage_node_metadata = 1;
}

message AddLogStreamRequest {
    uint32 cluster_id = 1 [
        (gogoproto.casttype) =
            "github.daumkakao.com/varlog/varlog/pkg/types.ClusterID",
        (gogoproto.customname) = "ClusterID"
    ];
    uint32 storage_node_id = 2 [
        (gogoproto.casttype) =
            "github.daumkakao.com/varlog/varlog/pkg/types.StorageNodeID",
        (gogoproto.customname) = "StorageNodeID"
    ];
    uint32 log_stream_id = 3 [
        (gogoproto.casttype) =
            "github.daumkakao.com/varlog/varlog/pkg/types.LogStreamID",
        (gogoproto.customname) = "LogStreamID"
    ];
    varlogpb.StorageDescriptor storage = 4;
}
message AddLogStreamResponse {
    // TODO (jun): Use LogStreamMetadataDescriptor
    varlogpb.LogStreamDescriptor log_stream = 1;
}

message RemoveLogStreamRequest {
    uint32 cluster_id = 1 [
        (gogoproto.casttype) =
            "github.daumkakao.com/varlog/varlog/pkg/types.ClusterID",
        (gogoproto.customname) = "ClusterID"
    ];
    uint32 storage_node_id = 2 [
        (gogoproto.casttype) =
            "github.daumkakao.com/varlog/varlog/pkg/types.StorageNodeID",
        (gogoproto.customname) = "StorageNodeID"
    ];
    uint32 log_stream_id = 3 [
        (gogoproto.casttype) =
            "github.daumkakao.com/varlog/varlog/pkg/types.LogStreamID",
        (gogoproto.customname) = "LogStreamID"
    ];
}

message SealRequest {
    uint32 cluster_id = 1 [
        (gogoproto.casttype) =
            "github.daumkakao.com/varlog/varlog/pkg/types.ClusterID",
        (gogoproto.customname) = "ClusterID"
    ];
    uint32 storage_node_id = 2 [
        (gogoproto.casttype) =
            "github.daumkakao.com/varlog/varlog/pkg/types.StorageNodeID",
        (gogoproto.customname) = "StorageNodeID"
    ];
    uint32 log_stream_id = 3 [
        (gogoproto.casttype) =
            "github.daumkakao.com/varlog/varlog/pkg/types.LogStreamID",
        (gogoproto.customname) = "LogStreamID"
    ];
    uint64 last_committed_glsn = 4 [
        (gogoproto.casttype) =
            "github.daumkakao.com/varlog/varlog/pkg/types.GLSN",
        (gogoproto.customname) = "LastCommittedGLSN"
    ];
}

message SealResponse {
    varlogpb.LogStreamStatus status = 1;
    uint64 last_committed_glsn = 2 [
        (gogoproto.casttype) =
            "github.daumkakao.com/varlog/varlog/pkg/types.GLSN",
        (gogoproto.customname) = "LastCommittedGLSN"
    ];
}

message UnsealRequest {
    uint32 cluster_id = 1 [
        (gogoproto.casttype) =
            "github.daumkakao.com/varlog/varlog/pkg/types.ClusterID",
        (gogoproto.customname) = "ClusterID"
    ];
    uint32 storage_node_id = 2 [
        (gogoproto.casttype) =
            "github.daumkakao.com/varlog/varlog/pkg/types.StorageNodeID",
        (gogoproto.customname) = "StorageNodeID"
    ];
    uint32 log_stream_id = 3 [
        (gogoproto.casttype) =
            "github.daumkakao.com/varlog/varlog/pkg/types.LogStreamID",
        (gogoproto.customname) = "LogStreamID"
    ];
}

message SyncRequest {
    message BackupNode {
        uint32 storage_node_id = 1 [
            (gogoproto.casttype) =
                "github.daumkakao.com/varlog/varlog/pkg/types.StorageNodeID",
            (gogoproto.customname) = "StorageNodeID"
        ];
        string address = 2;
    }
    uint32 cluster_id = 1 [
        (gogoproto.casttype) =
            "github.daumkakao.com/varlog/varlog/pkg/types.ClusterID",
        (gogoproto.customname) = "ClusterID"
    ];
    uint32 storage_node_id = 2 [
        (gogoproto.casttype) =
            "github.daumkakao.com/varlog/varlog/pkg/types.StorageNodeID",
        (gogoproto.customname) = "StorageNodeID"
    ];
    uint32 log_stream_id = 3 [
        (gogoproto.casttype) =
            "github.daumkakao.com/varlog/varlog/pkg/types.LogStreamID",
        (gogoproto.customname) = "LogStreamID"
    ];
    BackupNode backup = 4 [(gogoproto.nullable) = true];
    uint64 last_glsn = 5 [
        (gogoproto.casttype) =
            "github.daumkakao.com/varlog/varlog/pkg/types.GLSN",
        (gogoproto.customname) = "LastGLSN"
    ];
}

message SyncResponse {
    SyncStatus status = 1;
}

message GetPrevCommitInfoRequest {
    uint64 prev_high_watermark = 1
        [(gogoproto.casttype) =
             "github.daumkakao.com/varlog/varlog/pkg/types.GLSN"];
}

message LogStreamCommitInfo {
    option (gogoproto.equal) = true;

    enum Status {
        option (gogoproto.goproto_enum_prefix) = false;
        OK = 0 [(gogoproto.enumvalue_customname) = "GetPrevCommitStatusOK"];
        NOT_FOUND = 1
            [(gogoproto.enumvalue_customname) = "GetPrevCommitStatusNotFound"];
        INCONSISTENT = 2 [(gogoproto.enumvalue_customname) =
                              "GetPrevCommitStatusInconsistent"];
    }

    uint32 log_stream_id = 1 [
        (gogoproto.casttype) =
            "github.daumkakao.com/varlog/varlog/pkg/types.LogStreamID",
        (gogoproto.customname) = "LogStreamID"
    ];
    Status status = 2;
    uint64 committed_llsn_offset = 3 [
        (gogoproto.casttype) =
            "github.daumkakao.com/varlog/varlog/pkg/types.LLSN",
        (gogoproto.customname) = "CommittedLLSNOffset"
    ];
    uint64 committed_glsn_offset = 4 [
        (gogoproto.casttype) =
            "github.daumkakao.com/varlog/varlog/pkg/types.GLSN",
        (gogoproto.customname) = "CommittedGLSNOffset"
    ];
    uint64 committed_glsn_length = 5
        [(gogoproto.customname) = "CommittedGLSNLength"];
    uint64 highest_written_llsn = 6 [
        (gogoproto.casttype) =
            "github.daumkakao.com/varlog/varlog/pkg/types.LLSN",
        (gogoproto.customname) = "HighestWrittenLLSN"
    ];
    uint64 high_watermark = 7
        [(gogoproto.casttype) =
             "github.daumkakao.com/varlog/varlog/pkg/types.GLSN"];
    uint64 prev_high_watermark = 8
        [(gogoproto.casttype) =
             "github.daumkakao.com/varlog/varlog/pkg/types.GLSN"];
}

message GetPrevCommitInfoResponse {
    uint32 storage_node_id = 1 [
        (gogoproto.casttype) =
            "github.daumkakao.com/varlog/varlog/pkg/types.StorageNodeID",
        (gogoproto.customname) = "StorageNodeID"
    ];
    repeated LogStreamCommitInfo commit_infos = 2;
}

// Management defines the public APIs for managing StorageNode.
service Management {
    // GetMetadata returns metadata of StorageNode.
    rpc GetMetadata(GetMetadataRequest) returns (GetMetadataResponse) {}
    // AddLogStream adds a new LogStream to StorageNode.
    rpc AddLogStream(AddLogStreamRequest) returns (AddLogStreamResponse) {}
    // RemoveLogStream removes a LogStream from StorageNode.
    rpc RemoveLogStream(RemoveLogStreamRequest)
        returns (google.protobuf.Empty) {}
    // Seal changes the status of LogStreamExecutor to LogStreamStatusSealing or
    // LogStreamStatusSealed.
    rpc Seal(SealRequest) returns (SealResponse) {}
    // Unseal changes the status of LogStreamExecutor to LogStreamStatusRunning.
    rpc Unseal(UnsealRequest) returns (google.protobuf.Empty) {}
    // Sync starts mirroring between two StorageNodes.
    rpc Sync(SyncRequest) returns (SyncResponse) {}
    rpc GetPrevCommitInfo(GetPrevCommitInfoRequest)
        returns (GetPrevCommitInfoResponse) {}
}
